--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo CRUD Management</title>
     <link rel="stylesheet" href="style.css">
-</head>g
+</head>
 <body>
     <div class="container">
         <h1>Todo List</h1>
